<?xml version="1.0"?>
<package format="2">
  <name>memory_game_handler</name>
  <version>0.0.0</version>
  <description>
          Package to contain Mini's sessions in the day care center
          with some new games
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="am.ruizt@gmail.com">Ángela María Ruiz Tejero</maintainer>


  <license>BSD</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>etts_msgs</depend>
  <depend>tv_on_demand</depend>	<!-- Message to communicate with tablet -->
  <depend>screens_msgs</depend>
  <depend>etts</depend>
  <depend>utils</depend>

  <export>
        <cpp cflags="-I${prefix} -I${prefix}/build"
         lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib"/>
  </export>
</package>
